# JIT_Compiler_with_Addaptive_Optimization

./: CMakeLists.txt  README.md  answer  ast.dot  jit_compiler_function.cpp  plot_timings.py  simple_arithmetic.cpp
include/: token.h
src/: CMakeLists.txt  ir_generator.h  jit_engine.h  lexer.h  logger.h  main.cpp  optimizer.h  profiler.h
src/ast/: ast.cpp  ast.h  ast_printer.cpp  ast_printer.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
src/runtime/: runtime.cpp  runtime.h
test/: 3ar.cpp  all.cpp  astree.cpp  token_type.cpp
